hphp/hack/test/typecheck/reactive/test_rx_enabled3.php
<?hh // strict

<<__Rx>>
function f(): void {
  if (HH\Rx\IS_ENABLED) {
    rx();
  }
  nonrx(); // should error
}

<<__Rx>>
function rx(): void {
}

function nonrx(): void {
}
